--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Wallboard demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body class="d-flex h-100 text-bg-dark">
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h1 class="float-md-start mb-0">Wallboard</h1>
+          <h1 class="float-md-start mb-3">Wallboard</h1>
         </div>
       </header>
 
-      <h3>Welcome to my wallboard</h3>
+      <div class="d-flex flex-row mb-3">
+        <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 1</div>
+        <div class="bg-secondary m-2 p-4 opacity-50 p-2 rounded-pill">Flex item 2</div>
+        <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 3</div>
+      </div>
 
       <footer class="mt-auto text-white-50">
         <p>Page 1 of 1</p>
