Footer at bottom

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 3</div>
       </div>
 
-      <footer class="mt-auto text-white-50">
+      <footer class="footer fixed-bottom text-center text-white-50">
         <p>Page 1 of 1</p>
       </footer>
     </div>
