--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Wallboard demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body class="d-flex h-100 text-bg-dark">
+  <body class="d-flex h-100 w-100 text-bg-dark">
 
-    <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="mb-auto">
+    <div class="d-flex h-100 w-100 p-3 mx-auto flex-column">
+      <header>
         <div>
           <h1 class="float-md-start mb-3">Wallboard</h1>
         </div>
       </header>
 
-      <div class="d-flex flex-row mb-3">
+      <div class="d-flex flex-row">
         <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 1</div>
         <div class="bg-secondary m-2 p-4 opacity-50 p-2 rounded-pill">Flex item 2</div>
         <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 3</div>
