--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
     <title>Wallboard demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body class="d-flex h-100 w-100 text-bg-dark">
+  <body class="h-100 w-100 text-bg-dark">
 
-    <div class="d-flex h-100 w-100 p-3 mx-auto flex-column">
+    <div class="container-fluid">
       <header>
-        <div>
-          <h1 class="float-md-start mb-3">Wallboard</h1>
+        <div class="m-2">
+          <h1>Wallboard</h1>
         </div>
       </header>
 
-      <div class="d-flex flex-row">
-        <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 1</div>
-        <div class="bg-secondary m-2 p-4 opacity-50 p-2 rounded-pill">Flex item 2</div>
-        <div class="bg-secondary m-2 p-4 rounded-pill">Flex item 3</div>
+      <div class="row m-2">
+        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded text-center">
+          <h4>SERVICE LEVEL</h4>
+          <br />
+          <br />
+          <br />
+        </div>
+        <div class="col-1 bg-secondary m-2 p-4 opacity-25 p-2 rounded text-center">
+          0<br />
+          ANSWERED
+        </div>
+        <div class="col-1 bg-secondary m-2 p-4 opacity-25 rounded text-center">
+          0:00:00<br />
+          AVG WAIT
+        </div>
+        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded">
+          Queue 1
+        </div>
+        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded">
+          Queue 2
+        </div>
       </div>
 
       <footer class="footer fixed-bottom text-center text-white-50">
