--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wallboard demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Custom styles -->
+    <link href="style.css" rel="stylesheet">
   </head>
-  <body class="h-100 w-100 text-bg-dark">
+  <body class="h-100 w-100">
 
     <div class="container-fluid">
       <header>
@@ -16,25 +18,50 @@
       </header>
 
       <div class="row m-2">
-        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded text-center">
+        <div class="col-3 m-2 p-4 rounded text-center panel">
           <h4>SERVICE LEVEL</h4>
           <br />
           <br />
           <br />
         </div>
-        <div class="col-1 bg-secondary m-2 p-4 opacity-25 p-2 rounded text-center">
-          0<br />
+        <div class="col-1 m-2 p-4 rounded text-center panel">
+          <div class="zylinc-orange">
+            <h2>0</h2>
+          </div>
           ANSWERED
+          <br />
+          <div class="zylinc-orange">
+            <h2>0</h2>
+          </div>
+          IN QUEUE
+          <br />
+          <div class="zylinc-orange">
+            <h2>0</h2>
+          </div>
+          MISSED
         </div>
-        <div class="col-1 bg-secondary m-2 p-4 opacity-25 rounded text-center">
-          0:00:00<br />
+        <div class="col-1 m-2 p-4 rounded text-center panel">
+          <div class="zylinc-orange">
+            <h2>0:00:00</h2>
+          </div>
           AVG WAIT
+          <br />
+          <div class="zylinc-orange">
+            <h2>0:00:00</h2>
+          </div>
+          CURRENT<br />
+          LONGEST WAIT
+          <br />
+          <div class="zylinc-orange">
+            <h2>0%</h2>
+          </div>
+          ABANDONED
         </div>
-        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded">
-          Queue 1
+        <div class="col-3 m-2 p-4 rounded panel">
+          <h3>Queue 1</h3>
         </div>
-        <div class="col-3 bg-secondary m-2 p-4 opacity-25 rounded">
-          Queue 2
+        <div class="col-3 m-2 p-4 rounded panel">
+          <h3>Queue 2</h3>
         </div>
       </div>
 
