--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wallboard demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
     <!-- Custom styles -->
     <link href="style.css" rel="stylesheet">
   </head>
@@ -22,6 +23,24 @@
           <h4>SERVICE LEVEL</h4>
           <br />
           <br />
+          <script>
+
+            var data = [
+              {
+                domain: { x: [0, 1], y: [0, 1] },
+                value: 450,
+                title: { text: "Speed" },
+                type: "indicator",
+                mode: "gauge+number",
+                delta: { reference: 400 },
+                gauge: { axis: { range: [null, 500] } }
+              }
+            ];
+
+            var layout = { width: 600, height: 400 };
+            Plotly.newPlot('myDiv', data, layout);
+
+          </script>
           <br />
         </div>
         <div class="col-1 m-2 p-4 rounded text-center panel">
@@ -62,6 +81,15 @@
         </div>
         <div class="col-3 m-2 p-4 rounded panel">
           <h3>Queue 2</h3>
+        </div>
+      </div>
+
+      <div class="row m-2">
+        <div class="col-5 m-2 p-4 rounded text-center panel">
+          <h4>CALL DISTRIBUTION</h4>
+          <br />
+          <br />
+          <br />
         </div>
       </div>
 
