--- a/index.html
+++ b/index.html
@@ -22,25 +22,7 @@
         <div class="col-3 m-2 p-4 rounded text-center panel">
           <h4>SERVICE LEVEL</h4>
           <br />
-          <br />
-          <script>
-
-            var data = [
-              {
-                domain: { x: [0, 1], y: [0, 1] },
-                value: 450,
-                title: { text: "Speed" },
-                type: "indicator",
-                mode: "gauge+number",
-                delta: { reference: 400 },
-                gauge: { axis: { range: [null, 500] } }
-              }
-            ];
-
-            var layout = { width: 600, height: 400 };
-            Plotly.newPlot('myDiv', data, layout);
-
-          </script>
+          <div id="serviceLevelGauge"></div>
           <br />
         </div>
         <div class="col-1 m-2 p-4 rounded text-center panel">
@@ -98,6 +80,28 @@
       </footer>
     </div>
     
+
+    <script>
+      var data = [
+        {
+          value: 70,
+          type: "indicator",
+          mode: "gauge+number",
+          gauge: { axis: { range: [null, 100] } }
+        }
+      ];
+
+      var layout = { 
+        width: 300, height: 230, 
+        margin: { l: 40, b: 0, t: 0, r: 40 }, 
+        paper_bgcolor: "#40434a",
+        font: { color: "#fff" },
+        coloraxis: { colorbar: { tickcolor: "#fff" } }
+      };
+      Plotly.newPlot('serviceLevelGauge', data, layout);
+    </script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
