--- a/index.html
+++ b/index.html
@@ -13,67 +13,141 @@
 
     <div class="container-fluid">
       <header>
-        <div class="m-2">
+        <div class="m-2 p-2">
           <h1>Wallboard</h1>
         </div>
       </header>
 
       <div class="row m-2">
-        <div class="col-3 m-2 p-4 rounded text-center panel">
-          <h4>SERVICE LEVEL</h4>
-          <br />
-          <div id="serviceLevelGauge"></div>
-          <br />
+
+        <!-- Left column with statistics panels -->
+        <div class="col-6">
+
+          <!-- Upper row with 3 panels -->
+          <div class="row">
+
+            <div class="col-6 p-4 text-center panel">
+              <h4>SERVICE LEVEL</h4>
+              <br />
+              <div id="serviceLevelGauge"></div>
+              <br />
+            </div>
+            <div class="col-3 p-4 text-center panel">
+              <div class="zylinc-orange">
+                <h2>0</h2>
+              </div>
+              ANSWERED
+              <br />
+              <div class="zylinc-orange mt-4">
+                <h2>0</h2>
+              </div>
+              IN QUEUE
+              <br />
+              <div class="zylinc-orange mt-4">
+                <h2>0</h2>
+              </div>
+              MISSED
+            </div>
+            <div class="col-3 p-4 text-center panel">
+              <div class="zylinc-orange">
+                <h2>0:00:00</h2>
+              </div>
+              AVG WAIT
+              <br />
+              <div class="zylinc-orange mt-4">
+                <h2>0:00:00</h2>
+              </div>
+              CURRENT<br />
+              LONGEST WAIT
+              <br />
+              <div class="zylinc-orange mt-4">
+                <h2>0%</h2>
+              </div>
+              ABANDONED
+            </div>
+    
+          </div>
+
+          <!-- Lower row with Call Distribution Chart -->
+          <div class="row">
+
+            <div class="col-12 p-4 text-center panel">
+              <h4>CALL DISTRIBUTION</h4>
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+            </div>
+
+          </div>
+
         </div>
-        <div class="col-1 m-2 p-4 rounded text-center panel">
-          <div class="zylinc-orange">
-            <h2>0</h2>
+
+        <!-- Right column with queues -->
+        <div class="col-6">
+          <div class="row">
+
+            <div class="col p-4 panel">
+              <h3>Queue 1</h3>
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
           </div>
-          ANSWERED
-          <br />
-          <div class="zylinc-orange">
-            <h2>0</h2>
+            <div class="col p-4 panel">
+              <h3>Queue 2</h3>
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
           </div>
-          IN QUEUE
-          <br />
-          <div class="zylinc-orange">
-            <h2>0</h2>
+
           </div>
-          MISSED
         </div>
-        <div class="col-1 m-2 p-4 rounded text-center panel">
-          <div class="zylinc-orange">
-            <h2>0:00:00</h2>
-          </div>
-          AVG WAIT
-          <br />
-          <div class="zylinc-orange">
-            <h2>0:00:00</h2>
-          </div>
-          CURRENT<br />
-          LONGEST WAIT
-          <br />
-          <div class="zylinc-orange">
-            <h2>0%</h2>
-          </div>
-          ABANDONED
-        </div>
-        <div class="col-3 m-2 p-4 rounded panel">
-          <h3>Queue 1</h3>
-        </div>
-        <div class="col-3 m-2 p-4 rounded panel">
-          <h3>Queue 2</h3>
-        </div>
+
       </div>
 
-      <div class="row m-2">
-        <div class="col-5 m-2 p-4 rounded text-center panel">
-          <h4>CALL DISTRIBUTION</h4>
-          <br />
-          <br />
-          <br />
-        </div>
-      </div>
 
       <footer class="footer fixed-bottom text-center text-white-50">
         <p>Page 1 of 1</p>
